--- a/pytorch_mnist_multiclass_clf.ipynb
+++ b/pytorch_mnist_multiclass_clf.ipynb
@@ -16,21 +16,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-18T22:49:55.787205Z",
+     "start_time": "2020-05-18T22:49:51.988583Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/manoloflores/anaconda3/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
-    "## IMPORTING A BUNCH OF PYTORCH LIBRARIES \n",
-    "\n",
     "import numpy as np\n",
     "import torch\n",
     "import torchvision \n",
     "import torchvision.transforms as transforms\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
-    "import seaborn as sns; sns.set()\n",
+    "import seaborn as sns\n",
     "import copy, random\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "\n",
+    "sns.set()"
    ]
   },
   {
@@ -413,9 +427,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_pytorch_p36)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -427,7 +441,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
